# NYT-IBX-LVT

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
environment/: requirements.txt
notebooks/: IBX Land Value Pipeline.ipynb  estimate_ibx_walkshed.ipynb  ibx_land_value_pipeline_mappluto.ipynb  ibx_walkshed.ipynb
scripts/: fetch_dof_assessment.py  prepare_values.py  walkshed_land_value_estimator.py
src/NYT IBX LVT/"""Core utilities for the suburban transit / walkshed /: __init__.py
src/nyt_ibx_lvt/: __init__.py  pipeline.py
src/nyt_ibx_lvt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
